Manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  ingressClassName: traefik
  # tls:
  #   - secretName: fastapi-selfsigned-secret
  #     hosts:
  #       - jenkins-exam.cloudns.ph
  rules:
  - host: jenkins-exam.cloudns.ph
    http:
      paths:
        # Path movies
        - path: /api/v1/movies
          pathType: Prefix
          backend:
             service:
              name: fastapi-movie-service
              port:
                number: 8000
        # Path casts
        - path: /api/v1/casts
          pathType: Prefix
          backend:
             service:
              name: fastapi-cast-service
              port:
                number: 8000
